added what happens when Mario hits goomba or piranha and when he dies or reaches peach

--- a/marioAdventure.html
+++ b/marioAdventure.html
@@ -157,9 +157,9 @@
     <source src="./audio/vine.mp3" type="audio/mp3">
     <source src="./audio/vine.ogg" type="audio/ogg">
 </audio>
-<audio id = "gameOver">
-    <source src="./audio/game_over.mp3" type="audio/mp3">
-    <source src="./audio/game_over.ogg" type="audio/ogg">
+<audio id = "marioDies">
+    <source src="./audio/mario_dies.mp3" type="audio/mp3">
+    <source src="./audio/mario_dies.ogg" type="audio/ogg">
 </audio>
 <audio id = "youWin">
     <source src="./audio/you_win.mp3" type="audio/mp3">
