added jQuery hide() for startScreen

--- a/marioAdventure.html
+++ b/marioAdventure.html
@@ -23,7 +23,6 @@
         border: 1px dashed black;
         position: absolute;
         z-index: 1;
-        display: block;
     }
     
     #endScreen
@@ -118,7 +117,7 @@
         Mushrooms are worth 5 lives each. <br/ >
         Coin spots are worth 5 coins each.</p>
     <h2>Click start to begin</h2>
-    <button id = "start" onclick = "hide()">Start</button>
+    <button id = "start">Start</button>
     <br />
     <p style = "text-align: center; margin-top: 100px; margin-left: 60px; font-size: 15px">
         Copyright © 2018 Nintendo® All Rights Reserved</p>
@@ -166,5 +165,5 @@
     <source src="./audio/you_win.ogg" type="audio/ogg">
 </audio>
 
-
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src = "./marioAdventure.js"></script>
